[gd_scene load_steps=6 format=2]

[ext_resource path="res://CharacterPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/images/iconsgear/arron_armor_1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/iconsgear/arron_weapon1_1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/portrait/ArronNormal.png" type="Texture" id=4]
[ext_resource path="res://assets/images/iconsgear/arron_weapon2_1.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 326.591
margin_top = 31.5911
margin_right = 1626.59
margin_bottom = 1050.59
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Panel"]
margin_left = 94.9206
margin_top = 45.6443
margin_right = 326.921
margin_bottom = 339.644
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="TextureRect" parent="Panel"]
margin_left = 663.941
margin_top = 629.915
margin_right = 883.941
margin_bottom = 849.915
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Weapon"]
margin_top = -31.748
margin_right = 254.0
margin_bottom = -7.74799
text = "Weapon Level"
align = 1

[node name="Label2" type="Label" parent="Panel/Weapon"]
margin_left = -9.73047
margin_top = 243.481
margin_right = 244.27
margin_bottom = 267.481
text = "Stats"
align = 1

[node name="Armor" type="TextureRect" parent="Panel"]
margin_left = 976.01
margin_top = 626.552
margin_right = 1196.01
margin_bottom = 846.552
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Armor"]
margin_top = -31.748
margin_right = 254.0
margin_bottom = -7.74799
text = "Armor Level"
align = 1

[node name="Label2" type="Label" parent="Panel/Armor"]
margin_left = -18.7059
margin_top = 243.481
margin_right = 235.294
margin_bottom = 267.481
text = "Stats"
align = 1

[node name="StatsLabel" type="Label" parent="Panel"]
margin_left = 41.7028
margin_top = 529.141
margin_right = 364.703
margin_bottom = 634.141
text = "Stats
Hp
Mp
Atk"
align = 1

[node name="ExpBar" type="ProgressBar" parent="Panel"]
margin_left = 89.4036
margin_top = 410.15
margin_right = 331.404
margin_bottom = 434.15
percent_visible = false

[node name="Label" type="Label" parent="Panel/ExpBar"]
margin_left = 33.0
margin_top = -36.0
margin_right = 201.0
margin_bottom = -12.0
text = "Level 1"
align = 1

[node name="SkillsButton" type="Button" parent="Panel"]
margin_left = 605.445
margin_top = 361.905
margin_right = 856.445
margin_bottom = 411.905
text = "Skills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillContainer" type="ScrollContainer" parent="Panel"]
margin_left = 417.092
margin_top = 131.728
margin_right = 1021.09
margin_bottom = 327.728
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/SkillContainer"]
margin_right = 100.0
margin_bottom = 100.0
columns = 6

[node name="Button" type="Button" parent="Panel/SkillContainer/GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true

[node name="Label" type="Label" parent="Panel/SkillContainer/GridContainer/Button"]
margin_right = 91.0
margin_bottom = 24.0
text = "Skill 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Panel"]
margin_left = 521.356
margin_top = 26.9087
margin_right = 719.356
margin_bottom = 50.9087
text = "Name"
align = 1

[node name="PrevCharButton" type="Button" parent="Panel"]
margin_left = 19.0488
margin_top = 39.685
margin_right = 68.0488
margin_bottom = 152.685
text = "<"

[node name="NextCharButton" type="Button" parent="Panel"]
margin_left = 1220.71
margin_top = 39.685
margin_right = 1269.71
margin_bottom = 152.685
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 0.741176 )
margin_left = 721.607
margin_top = 55.1593
margin_right = 1278.61
margin_bottom = 935.159
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkillPanel"]
margin_left = 20.4508
margin_top = 46.4142
margin_right = 531.451
margin_bottom = 80.4142
text = "Attack SP 5 | Support SP 5 | Ultimate SP 5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SkillPanel"]
margin_left = 127.9
margin_top = 108.0
margin_right = 435.9
margin_bottom = 728.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SkillPanel/ScrollContainer"]
margin_right = 100.0
margin_bottom = 100.0
columns = 3

[node name="Button" type="Button" parent="SkillPanel/ScrollContainer/GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true

[node name="Label" type="Label" parent="SkillPanel/ScrollContainer/GridContainer/Button"]
margin_right = 91.0
margin_bottom = 24.0
text = "Skill 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="SkillPanel"]
margin_left = 110.309
margin_top = 763.675
margin_right = 461.309
margin_bottom = 816.675
text = "Confirm"

[node name="WeaponPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 0.741176 )
margin_left = 722.0
margin_top = 186.225
margin_right = 1279.0
margin_bottom = 819.225
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WeaponPanel"]
margin_left = 20.4508
margin_top = 46.4142
margin_right = 531.451
margin_bottom = 80.4142
text = "Weapons"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="WeaponPanel"]
margin_left = 129.487
margin_top = 108.0
margin_right = 437.487
margin_bottom = 728.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="VBoxContainer" parent="WeaponPanel/ScrollContainer"]
margin_right = 300.0
margin_bottom = 404.0

[node name="Button" type="Button" parent="WeaponPanel/ScrollContainer/GridContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
toggle_mode = true

[node name="Label" type="Label" parent="WeaponPanel/ScrollContainer/GridContainer/Button"]
margin_left = 172.941
margin_top = 13.9314
margin_right = 277.941
margin_bottom = 37.9314
text = "weapon 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WeaponPanel/ScrollContainer/GridContainer/Button"]
margin_left = 11.8921
margin_top = 23.7841
margin_right = 161.892
margin_bottom = 173.784
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="WeaponPanel/ScrollContainer/GridContainer"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 404.0
rect_min_size = Vector2( 300, 200 )
toggle_mode = true

[node name="Label" type="Label" parent="WeaponPanel/ScrollContainer/GridContainer/Button2"]
margin_left = 172.941
margin_top = 13.9314
margin_right = 277.941
margin_bottom = 37.9314
text = "weapon 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="WeaponPanel/ScrollContainer/GridContainer/Button2"]
margin_left = 11.8921
margin_top = 23.7841
margin_right = 161.892
margin_bottom = 173.784
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="WeaponPanel"]
margin_left = 98.9822
margin_top = 548.472
margin_right = 449.982
margin_bottom = 601.472
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}
